[package]
name = "kvfast"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9"
tempfile = "3.10"
ptr_hash = { version = "1.0", features = ["epserde"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
epserde = "0.8"  # Match version used by ptr_hash
mem_dbg = "0.2"  # Required by epserde

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "kvfast_lib"
path = "src/lib.rs"
